gen java native sdk for OpenAI API

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,11 +19,11 @@
 #
 
 # @formatter:off
-group          = com.fortycoderplus.template
+group          = com.fortycoderplus.openai.sdk
 version        = 1.0.0
 
 junitVersion   = 5.9.2
 
-scmUrl         = https://github.com/40coderplus/gradle-single-module-template
-scmGit         = git@github.com:40coderplus/gradle-single-module-template.git
+scmUrl         = https://github.com/40CoderPlus/openai-java-sdk
+scmGit         = git@github.com:40CoderPlus/openai-java-sdk.git
 # @formatter:on
