--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ plugins {
     id "org.owasp.dependencycheck" version '7.4.4'
 
     id 'net.nemerosa.versioning' version '3.0.0'
+
+    id 'org.openapi.generator' version '6.5.0'
 }
 
 apply plugin: 'com.palantir.baseline-format'
@@ -37,12 +39,16 @@ repositories {
 }
 
 dependencies {
-    // lombok
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
-    // mapstruct
-    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+    implementation 'io.swagger:swagger-annotations:1.6.8'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
+    implementation 'org.openapitools:jackson-databind-nullable:0.2.4'
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation 'org.apache.httpcomponents:httpmime:4.5.13'
 
     // test
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
@@ -67,7 +73,7 @@ jar {
 }
 
 plugins.withType(JavaPlugin) {
-    project.sourceCompatibility = JavaVersion.VERSION_17
+    project.sourceCompatibility = JavaVersion.VERSION_11
 }
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
@@ -77,18 +83,34 @@ test {
     useJUnitPlatform()
 }
 
+openApiGenerate {
+    generatorName = 'java'
+    library = 'native'
+    inputSpec = "$rootDir/openai-openapi/openapi.yaml".toString()
+    outputDir = "$buildDir/gen/openapi".toString()
+    apiPackage = 'com.fortycoderplus.openai.sdk.api'
+    invokerPackage = 'com.fortycoderplus.openai.sdk.invoker'
+    modelPackage = 'com.fortycoderplus.openai.sdk.model'
+    configOptions = [
+            dateLibrary: 'java8'
+    ]
+    skipValidateSpec = true
+}
+
+sourceSets.main.java.srcDirs += ["$buildDir/gen/openapi/src/main/java"]
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            groupId = 'com.fortycoderplus.template'
+            groupId = group
             artifactId = project.name
             version = project.version
 
             from components.java
 
             pom {
-                name = "Gradle Single Module Template"
-                description = 'Gradle Single Module Template'
+                name = "OpenAI API Java SDK"
+                description = 'OpenAI API Java SDK'
                 url = "${scmUrl}"
                 developers {
                     developer {
@@ -110,7 +132,7 @@ publishing {
                 username "$nexusUsername"
                 password "$nexusPassword"
             }
-            url = version.endsWith('SNAPSHOT') ? "$nexusRelease" : "$nexusSnapshot"
+            url = version.endsWith('SNAPSHOT') ? "$nexusSnapshot" : "$nexusRelease"
             allowInsecureProtocol = !url.toString().startsWith("https://")
         }
     }
@@ -120,8 +142,8 @@ sonarqube {
     properties {
         property 'sonar.dependencyCheck.jsonReportPath', 'build/reports/dependency-check-report.json'
         property 'sonar.dependencyCheck.htmlReportPath', 'build/reports/dependency-check-report.html'
-        property 'sonar.projectName', 'gradle-single-module-template'
-        property 'sonar.projectKey', 'gradle-single-module-template'
+        property 'sonar.projectName', project.name
+        property 'sonar.projectKey', project.name
     }
 }
 
